--- a/gpunit/simple_test.yml
+++ b/gpunit/simple_test.yml
@@ -7,16 +7,18 @@
 # Note: this test uses a custom diff command
 #
 
-name: "tfsites.AnalyzeGwas - Basic test"
-module: tfsites.AnalyzeGwas
+name: "tfsites.AnalyzeGenomeMPRA - Basic test"
+module: tfsites.AnalyzeGenomeMPRA
 params:
-    GWAS.data.input: "data/14-input_gwas.tsv"
-    relative.affinity.PBM.data: "data/14-input_ets-norm-pbm.tsv"
+    MPRA.data: "data/06-input_mpra.tsv"
+    PBM/PWM.reference.data: "data/06-input_ets-norm-pbm.tsv"
     reference.genome: "https://datasets.genepattern.org/data/module_support_files/tfsites/hg38-chr2seq-pydict.pkl"
-    IUPAC.definition: "NNGGAWNN"
-    zero.pos: "FALSE"
-    SNV.effect: "inc,del,denovo"
-    SNV.effects.of.GWAS.data.filename:  "14-output_ets-all-possible-muts.tsv"
+    binding.site.definition: "NNGGAWNN"
+    zero-indexed.genomic.coordinates: "FALSE"
+    SNV.effects.to.report: "inc,del,denovo"
+    SNV.effects.of.MPRA.data.table.output.filename:  "06-output_ets-all-possible-muts.tsv"
+    optimization.threshold: 1.3
+    suboptimization.threshold: 0.75
 assertions:
     jobStatus: success
 
